<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="100dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"/>
        <TextView
            android:paddingTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/generalsans_medium"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/app_version"
            android:fontFamily="@font/generalsans_medium"/>
        <LinearLayout
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attrb_lic"
                android:fontFamily="@font/generalsans_medium"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apache_lic"
                android:fontFamily="@font/generalsans_regular" />
            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:fontFamily="@font/generalsans_medium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/instagram_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instagram_account"
                android:fontFamily="@font/generalsans_regular" />
            <TextView
                android:id="@+id/github_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_account"
                android:fontFamily="@font/generalsans_regular" />
            <TextView
                android:paddingTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:fontFamily="@font/generalsans_medium"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/phone_dial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:fontFamily="@font/generalsans_regular"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>