<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".screens.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            app:strokeColor="@color/material_dynamic_primary40"
            app:strokeWidth="4dp">
            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/profile_pic"
                android:scaleType="centerCrop"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/name"
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:fontFamily="@font/generalsans_bold"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:fontFamily="@font/generalsans_medium"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_id"
            android:fontFamily="@font/generalsans_medium"
            android:textSize="15sp"
            android:paddingBottom="30dp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:paddingBottom="30dp"
            app:strokeColor="@color/material_dynamic_primary40">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_status"
                    android:fontFamily="@font/generalsans_medium"/>
                <TextView
                    android:elevation="2dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/material_dynamic_primary40"
                    android:fontFamily="@font/generalsans_medium"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:layout_gravity="left"
            android:text="@string/academic"
            android:fontFamily="@font/generalsans_medium"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:strokeColor="@color/material_dynamic_primary40">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:fontFamily="@font/generalsans_medium"/>
                <TextView
                    android:elevation="2dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_status"
                    android:fontFamily="@font/generalsans_medium"
                    android:textColor="@color/material_dynamic_primary40"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:strokeColor="@color/material_dynamic_primary40">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faculty"
                    android:fontFamily="@font/generalsans_medium"/>
                <TextView
                    android:elevation="2dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/generalsans_medium"
                    android:text="@string/faculty_name"
                    android:textColor="@color/material_dynamic_primary40"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:strokeColor="@color/material_dynamic_primary40">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/major"
                    android:fontFamily="@font/generalsans_medium"/>
                <TextView
                    android:elevation="2dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/major_name"
                    android:fontFamily="@font/generalsans_medium"
                    android:textColor="@color/material_dynamic_primary40"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:strokeColor="@color/material_dynamic_primary40">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester"
                    android:fontFamily="@font/generalsans_medium"/>
                <TextView
                    android:elevation="2dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_semester"
                    android:fontFamily="@font/generalsans_medium"
                    android:textColor="@color/material_dynamic_primary40"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>