<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:fontFamily="@font/generalsans_medium">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="15dp"
            app:startIconDrawable="@drawable/ic_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:fontFamily="@font/generalsans_medium"
            android:singleLine="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="15dp"
            app:startIconDrawable="@drawable/ic_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level"
            android:fontFamily="@font/generalsans_medium"
            android:singleLine="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="15dp"
            app:startIconDrawable="@drawable/ic_faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faculty"
            android:fontFamily="@font/generalsans_medium"
            android:singleLine="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="15dp"
            app:startIconDrawable="@drawable/ic_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/major"
            android:fontFamily="@font/generalsans_medium"
            android:singleLine="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="15dp"
            app:startIconDrawable="@drawable/ic_semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/semester"
            android:fontFamily="@font/generalsans_medium"
            android:singleLine="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:fontFamily="@font/generalsans_medium"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>